--- a/modules/dashboard/dashboard.css
+++ b/modules/dashboard/dashboard.css
@@ -152,11 +152,10 @@ background-color: var(--button_background);
   margin: 2rem 1rem 0px 1rem;
 }
 
-.dashbord_Main_Container p{
+.dashbord_Main_Container_P{
     padding: 0 2rem;
-    color: oklch(0.551 0.027 264.364);
+    color: oklch(0.551 0.027 264.364); 
     font-size: 1.6rem;
-    color: var();
     margin: 0;
 }
 
@@ -164,18 +163,60 @@ background-color: var(--button_background);
 .cards_Container{
     display:grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap:10px;
+    grid-template-areas:"one two three four"
+                        "five five six six";
+    gap:3rem;
+    padding: 2.5rem;
 
 }
 .cards_Container_Cards{
-    height: 210px;
-    border: 2px solid red;
+     box-shadow: 0.1px 0.1px 1.3px 0.1px var(--policy-color);
+     padding: 10px 0px 10px 10px;
+     margin: 1rem 0px 0px 0px;
+     border-radius:1rem;
 }
 
-/* .cards_Container_Cards:nth-of-type(5){
-    grid-column: 1/3;
-    grid-row: 1/3;
-} */
+.cards_Container_Cards:hover{
+    box-shadow: 0.1px 0.2px 1.3px 0.2px var(--policy-color);
+    scale: 1.02;
+}
 
+.cards_Container_Cards_Content{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 6rem;
+    padding-right:12px;
 
+}
 
+.cards_Container_Cards_Paragraph{
+    padding: 0px 0px;
+    color: var(--policy-color);
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.cards_Container_Cards_p{
+  font-weight: 700;
+  font-size: 2.4rem;
+  color: var(--heading-color);
+   margin: 3px;
+}
+.cards_Container_Cards_p2{
+    font-size: 1.2rem;
+    margin: 3px;
+    color: var(--policy-color);
+}
+
+.logo_Image_Icon{
+    width: 1.5rem;
+}
+
+.logo_Design{
+    padding: 3px;
+    background-color: #4F39F6;
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    
+}
