--- a/modules/task/task.css
+++ b/modules/task/task.css
@@ -349,6 +349,11 @@ main {
 
 /*_______TASK_WINDOW_MODAL________*/
 .task_Window_Modal{
+     display: none;
+    
+}
+
+.modal_Display{
     display: flex;
     flex-direction: column;
     gap:1rem;
@@ -360,7 +365,6 @@ main {
     padding: 1rem 2rem ;
     margin-top: 2rem;
 }
-
 .task_Modal_Create{
     display: flex;
     align-items: center;
