--- a/modules/task/task.css
+++ b/modules/task/task.css
@@ -45,6 +45,7 @@ main {
     grid-template-columns: 1fr 4fr;
     width: 100%;
     height: 100vh;
+    position: relative;
     
 
 }
@@ -349,12 +350,7 @@ main {
 
 /*_______TASK_WINDOW_MODAL________*/
 .task_Window_Modal{
-     display: none;
-    
-}
-
-.modal_Display{
-    display: flex;
+    display: none;
     flex-direction: column;
     gap:1rem;
     width: 50.2rem;
@@ -364,7 +360,27 @@ main {
     /* border: 2px solid red; */
     padding: 1rem 2rem ;
     margin-top: 2rem;
+    position: relative;
+    bottom: 40%;
+    left: 20%;
 }
+
+/* .modal_Display{
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    width: 50.2rem;
+    height:41.6rem;
+    background-color: var(--background-color);
+    border-radius:1rem;
+    border: 2px solid red; 
+    padding: 1rem 2rem ;
+    margin-top: 2rem;
+    position: relative;
+    bottom: 40%;
+    left: 20%;
+} */
+
 .task_Modal_Create{
     display: flex;
     align-items: center;
